# machlib

./: README.md
files/: build_project_Win.bat
projects/: CMakeLists.txt
projects/example_1/: CMakeLists.txt
projects/example_1/src/: main.cpp
projects/machlib/: CMakeLists.txt
projects/machlib/include/: machlib.hpp
projects/machlib/src/: machlib.cpp  main.cpp
